objects/Issue_Control__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group_Size__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Account.Group_Size__c)</formula>
        <label>Account Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.Anthem_Entity__c)</formula>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_or_Declined_Time__c</fullName>
        <description>Intermediate Field For Approval Or Declined Date</description>
        <formula>CASE(MOD( Issue_Control_Check_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Approved_or_Declined_Date__c - Issue_Control_Check_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Approved_or_Declined_Date__c - Issue_Control_Check_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Approved_or_Declined_Date__c - Issue_Control_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Approved_or_Declined_Date__c - Issue_Control_Check_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Approved_or_Declined_Date__c - Issue_Control_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Approved_or_Declined_Date__c - Issue_Control_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Approved_or_Declined_Date__c - Issue_Control_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Approved_or_Declined_Date__c - Issue_Control_Check_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval or Declined Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_or_Declined_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved or Declined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bypass_ID_Cards__c</fullName>
        <label>Bypass ID Cards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CalCobra_Dept__c</fullName>
        <label>CalCobra Dept</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_SME_Queue_time__c</fullName>
        <formula>IF( 
ISBLANK(In_Progress_Date_Completed__c),Now() - Not_Started_Date_Completed__c, 
(In_Progress_Date_Completed__c - Not_Started_Date_Completed__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME Queue time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Notified__c</fullName>
        <label>Employer Access Notified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_B_Audit_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E&amp;B Audit Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_B_Submitted_to_P2P__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E&amp;B Submitted to P2P</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Activation_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Activation Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Group_Number__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Tracking_ID__r.Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_State__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.HQ_State__c)</formula>
        <label>HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impacted_Products__c</fullName>
        <description>Copies value from &quot;Impacted Products&quot; field on Order.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipName>Issue_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Issue_Control_Applicable__c</fullName>
        <label>Is Case Installation Applicable?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Owner_the_Logged_in_user__c</fullName>
        <formula>IF(Owner:User.Id == $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner the Logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Control_Check_Date__c</fullName>
        <description>Captures Date When The Issue_Control Check Field Is True</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures Date When The Issue_Control Check Field Is True</inlineHelpText>
        <label>Issue_Control Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Control_Check__c</fullName>
        <description>167841</description>
        <formula>IF( 
AND( 
Implementation_Tracking_ID__r.SBC_Approved__c, 

Implementation_Tracking_ID__r.UW_Approved__c, 
Implementation_Tracking_ID__r.UW_Life_Disability_Approved__c, 
Implementation_Tracking_ID__r.UW_Medical_Approved__c, 
Implementation_Tracking_ID__r.UW_Vision_Approved__c , 

Implementation_Tracking_ID__r.InterPlan_Approved__c, 

Implementation_Tracking_ID__r.Dental_Complete_Approved__c , 

Implementation_Tracking_ID__r.Vision_Approved__c,
 
Implementation_Tracking_ID__r.Medical_Benefits_Approved__c ,

Implementation_Tracking_ID__r.RX_Approved__c), 

True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Control Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.JAA_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Benefit_Stage__c</fullName>
        <formula>TEXT(Medical_Benefits__r.Stage__c)</formula>
        <label>Medical Benefit Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Benefits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Benefits</label>
        <referenceTo>Medical_Benefit__c</referenceTo>
        <relationshipLabel>Case Installation</relationshipLabel>
        <relationshipName>Case_Installation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_UW_Approved__c</fullName>
        <label>Medical UW Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Stage__c</fullName>
        <formula>TEXT(Membership__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Enrollment_and_Billing__c</referenceTo>
        <relationshipLabel>Case Installation</relationshipLabel>
        <relationshipName>Case_Installation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Dept_Code__c</fullName>
        <label>New Dept. Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Started_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Not_Started_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Not Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Issue_Control_Date__c</fullName>
        <description>Original Issue_Control Date Used In The Workflow Rule When A New Record Is Created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue_Control Original Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Overall_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(Owner:User.LastName!=null, Owner:User.FirstName + &apos; &apos; + Owner:User.LastName, Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P2P_Audit_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P2P Audit Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Installation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paperwork_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Paperwork Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partial_Rates_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Send to IDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_Issue_Control__c == False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Date__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Pending Correction from WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Approved_Declined__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Approved or Declined from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Approved/Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_to_Not_Started__c</fullName>
        <description>The Date When Record Stage Field Value Changes To Not Started from Pending Correction As Prior Value. Retrieving From WF Rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction to Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Corrections_Stage__c</fullName>
        <description>This field fetches the associated Pending Correction&apos;s Stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Time__c</fullName>
        <description>Intermediate Pending Correction Date field</description>
        <formula>CASE(MOD( Issue_Control_Check_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Pending_Correction_Date__c -  Issue_Control_Check_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_Date__c -  Issue_Control_Check_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_Date__c -  Issue_Control_Check_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_Date__c -  Issue_Control_Check_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_Date__c -  Issue_Control_Check_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_Date__c -  Issue_Control_Check_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_Date__c -  Issue_Control_Check_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Pending_Correction_Date__c -  Issue_Control_Check_Date__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pooled_Non_Pooled__c</fullName>
        <formula>TEXT(Implementation_Tracking_ID__r.Account_Legal_Name__r.Pooled_Non_Pooled__c)</formula>
        <label>Pooled/Non-Pooled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Completed_for_Off_Shore_Associates__c</fullName>
        <label>QA Completed for Off-Shore Associates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Completed_for_OnShore_Associates__c</fullName>
        <label>QA Completed for OnShore Associates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RX_Stage__c</fullName>
        <formula>TEXT(RX__r.Stage__c)</formula>
        <label>RX Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RX</label>
        <referenceTo>Rx__c</referenceTo>
        <relationshipLabel>Case Installation</relationshipLabel>
        <relationshipName>Case_Installation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rates_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rates Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Implementation_Tracking_ID__r.Region__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_paperwork_receipt_date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Date_Signed_Paperwork_Rec_Opty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_Rates_to_Off_Shore__c</fullName>
        <label>Sent Rates to Off-Shore</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.Situs_State__c</formula>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>03 Waiting for Bill Approval</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>04 Activation Ready </fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <label>Sub-Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending a technical fix</fullName>
                </value>
                <value>
                    <fullName>Pending audit</fullName>
                </value>
                <value>
                    <fullName>Pending too early to process</fullName>
                </value>
                <value>
                    <fullName>Pending EBA updates</fullName>
                </value>
                <value>
                    <fullName>Pending Enrollment</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Pending Bill Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Clarification</fullName>
                </value>
                <value>
                    <fullName>Pending Migrations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix_Count__c</fullName>
        <label>Suffix Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Support_Issue_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support Issue Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_To_Approve_Deny__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This Is How Long It Took The SME Department To Approve/Deny A SME Record</description>
        <inlineHelpText>This Is How Long It Took The SME Department To Approve/Deny A SME Record</inlineHelpText>
        <label>Time To Approve/Deny</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_To_Pend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This Is How Long It Took A SME Department To Submit A Pending Correction</description>
        <inlineHelpText>This Is How Long It Took A SME Department To Submit A Pending Correction</inlineHelpText>
        <label>Time To Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_SME_Dept__c</fullName>
        <description>Sum Of Time To Pend And Time To Approve/Deny</description>
        <formula>IF( Pending_Correction_Date__c &lt;&gt; Approved_or_Declined_Date__c, (Time_To_Approve_Deny__c + Time_To_Pend__c ), Time_To_Pend__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum Of Time To Pend And Time To Approve/Deny</inlineHelpText>
        <label>Time in SME Dept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Total Time SME Record Was In The SME Department And The Sales Support/Implementations 		Department</description>
        <formula>IF( 
ISNULL(Pending_Correction_to_Approved_Declined__c), 0 ,

CASE(MOD( Original_Issue_Control_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Issue_Control_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Issue_Control_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Issue_Control_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Issue_Control_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Issue_Control_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Issue_Control_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Pending_Correction_to_Approved_Declined__c -  Original_Issue_Control_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((Pending_Correction_to_Approved_Declined__c -  Original_Issue_Control_Date__c)/7)*5)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Time SME Record Was In The SME Department And The Sales Support/Implementations 		Department</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Installation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <columns>HQ_State__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Stage__c</columns>
        <columns>Sub_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned_not_Completed_P2P_Audit</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <columns>Membership_Stage__c</columns>
        <columns>P2P_Audit_Owner__c</columns>
        <columns>E_B_Submitted_to_P2P__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E_B_Submitted_to_P2P__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Assigned not Completed P2P Audit</label>
    </listViews>
    <listViews>
        <fullName>Issue_Controls_Local_Issue_Control</fullName>
        <columns>Stage__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <columns>Membership_Stage__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>notEqual</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>Implementation_Type__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>Local CI Unassigned New Business</label>
        <language>en_US</language>
        <queue>Issue_Controls_Local</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Local_CI_Assigned</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Sub_Stage__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <columns>Membership_Stage__c</columns>
        <columns>RX_Stage__c</columns>
        <columns>Medical_Benefit_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>notEqual</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>01 Not Started,04 Approved,05 Declined</value>
        </filters>
        <filters>
            <field>Owner__c</field>
            <operation>notEqual</operation>
            <value>Case Installation - Local</value>
        </filters>
        <label>Local CI Assigned</label>
    </listViews>
    <listViews>
        <fullName>Local_CI_Unassigned</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Account_Group_Size__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Situs_State__c</columns>
        <columns>Region__c</columns>
        <columns>Owner__c</columns>
        <columns>Membership_Stage__c</columns>
        <columns>Sales_paperwork_receipt_date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Anthem_Entity__c</field>
            <operation>notEqual</operation>
            <value>National Accounts</value>
        </filters>
        <label>Local CI Unassigned</label>
        <queue>Issue_Controls_Local</queue>
    </listViews>
</CustomObject>